--- a/06-typescript-libraries/tsconfig.json
+++ b/06-typescript-libraries/tsconfig.json
@@ -1,25 +1,17 @@
 {
   "compilerOptions": {
-    // JavaScript Build Version
     "target": "ES5",
 
-    // Modules
-    "module": "Node16",
-    "moduleResolution": "Node16",
+    "module": "ES6",
     "esModuleInterop": true,
 
-    // Libraries
-    "lib": ["ES6"],
+    "lib": ["ES6", "DOM"],
 
-    // Compilation
     "rootDir": "./src",
     "outDir": "./dist",
     "sourceMap": true,
     "noEmitOnError": true,
 
-    // Code Quality
-    "noUnusedLocals": true,
-    "noImplicitReturns": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "removeComments": true
